# atm-dev

./: .gitignore  README.md  ahocorasick.py  apply_atm.py  atm.py  atm_educational.py  atm_utils.py  pyproject.toml
scripts/: eval_multilingual_mistral.sh
